[package]
name = "rust-warp-mongo"
version = "0.1.0"
authors = ["Edson Miguel Dewes <Edson.Dewes@grupoboticario.com.br>"]
edition = "2018"
	
[dependencies]
jsonwebtoken = "7.2"
mongodb = "1.1.0"
serde = {version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }
